Add lcov report generation script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "nyc mocha --recursive --compilers js:babel-register test/**/*.es6 test/*.es6",
+    "lcov_report": "nyc report --reporter=lcov",
     "babel": "babel src --out-dir lib",
     "standard": "standard src/*.es6 test/*.es6",
     "esdoc": "esdoc -c esdoc.json",
