--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-register": "^6.3.13",
     "esdoc": "^0.4.0",
     "expect.js": "^0.3.1",
-    "mocha": "^2.3.4",
+    "mocha": "^3.0.0",
     "mocha-jsdom": "^1.1.0",
     "nyc": "^8.3.0",
     "sinon": "^1.17.4",
@@ -38,7 +38,7 @@
     "babel-cli": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
     "widjet": "^1.0.0",
-    "widjet-utils": "*",
+    "widjet-utils": "^0.3.0",
     "widjet-disposables": "*"
   },
   "standard": {
