--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "babel": "babel src --out-dir lib",
     "standard": "standard src/*.es6 test/*.es6",
     "esdoc": "esdoc -c esdoc.json",
-    "install": "npm run babel"
+    "install": "npm run babel",
+    "start": "widjet-test-server test/**/*.es6"
   },
-  "keywords": ["widgets", "widget", "web", "widjet", "validation"],
+  "keywords": [
+    "widgets",
+    "widget",
+    "web",
+    "widjet",
+    "validation"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/abe33/widjet-validation.git"
@@ -25,6 +32,7 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "babel-register": "^6.3.13",
+    "codecov": "^1.0.0",
     "esdoc": "^0.4.0",
     "expect.js": "^0.3.1",
     "mocha": "^3.0.0",
@@ -32,8 +40,7 @@
     "nyc": "^8.3.0",
     "sinon": "^1.17.4",
     "standard": "^5.4.1",
-    "widjet-test-utils": "^1.0.0",
-    "codecov": "^1.0.0"
+    "widjet-test-utils": "^1.7.4"
   },
   "dependencies": {
     "babel-cli": "^6.3.17",
@@ -54,6 +61,11 @@
   "babel": {
     "presets": [
       "es2015"
+    ],
+    "plugins": [
+      ["transform-es2015-classes", {"loose": true}],
+      "transform-es3-member-expression-literals",
+      "transform-es3-property-literals"
     ],
     "env": {
       "test": {
