--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
   "dependencies": {
     "babel-cli": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
-    "widjet": "^1.0.0",
-    "widjet-utils": "^0.3.0",
-    "widjet-disposables": "*"
+    "widjet": "^1.0.2",
+    "widjet-utils": "^0.3.3",
+    "widjet-disposables": "^0.1.7",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0"
   },
   "standard": {
     "parser": "babel-eslint",
