--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "lib/index.js",
   "jsnext:main": "src/index.es6",
   "scripts": {
-    "test": "nyc mocha --timeout 5000 --recursive --compilers js:babel-register test/**/*.es6 test/*.es6",
+    "test": "nyc mocha --timeout 5000 --recursive --compilers js:babel-register test/**/*-test.es6",
     "lcov_report": "nyc report --reporter=lcov",
     "coverage": "npm run lcov_report && codecov",
     "babel": "babel src --out-dir lib",
     "standard": "standard src/*.es6 test/*.es6",
     "esdoc": "esdoc -c esdoc.json",
     "prepublish": "npm run babel",
-    "start": "widjet-test-server test/**/*.es6"
+    "start": "widjet-test-server test/**/*-test.es6"
   },
   "keywords": [
     "widgets",
