--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
   },
   "dependencies": {
     "babel-cli": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13",
-    "widjet": "^1.0.2",
-    "widjet-utils": "^0.5.0",
-    "widjet-disposables": "^0.1.7",
     "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
-    "babel-plugin-transform-es3-property-literals": "^6.8.0"
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-preset-es2015": "^6.3.13",
+    "jsdom": "^9.8.3",
+    "widjet": "^1.0.2",
+    "widjet-disposables": "^0.1.7",
+    "widjet-utils": "^0.5.0"
   },
   "standard": {
     "parser": "babel-eslint",
@@ -65,7 +66,12 @@
       "es2015"
     ],
     "plugins": [
-      ["transform-es2015-classes", {"loose": true}],
+      [
+        "transform-es2015-classes",
+        {
+          "loose": true
+        }
+      ],
       "transform-es3-member-expression-literals",
       "transform-es3-property-literals"
     ],
